--- a/src/main/resources/assets/mystbornhorizons/lang/en_us.json
+++ b/src/main/resources/assets/mystbornhorizons/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.mystbornhorizons.tectonite_geode": "§4Tectonite Geode§r",
   "item.mystbornhorizons.salondite": "Salondite",
   "item.mystbornhorizons.raw_salondite": "Raw Salondite",
+  "item.mystbornhorizons.tomahawk": "Tomahawk",
 
 
   "block.mystbornhorizons.froststone_block": "Froststone Block",
@@ -101,6 +102,8 @@
   "entity.mystbornhorizons.mantis": "Mantis",
   "entity.mystbornhorizons.copperbulb": "Copper Bulb",
   "entity.mystbornhorizons.icespider": "Ice Spider",
-  "entity.mystbornhorizons.basalthowler": "Basalt Howler"
+  "entity.mystbornhorizons.basalthowler": "Basalt Howler",
+
+  "entity.mystbornhorizons.tomahawk": "Tomahawk"
 
 }
