Dungeon Cobble and tomahawk Changes

--- a/src/main/resources/assets/mystbornhorizons/lang/en_us.json
+++ b/src/main/resources/assets/mystbornhorizons/lang/en_us.json
@@ -29,6 +29,7 @@
   "block.mystbornhorizons.molten_gold_blackstone": "Molten Gold Blackstone",
   "block.mystbornhorizons.molten_gold_basalt": "Molten Gold Basalt",
   "block.mystbornhorizons.dungeon_rootmass": "Dungeon Rootmass",
+  "block.mystbornhorizons.dungeon_cobble": "Dungeon Cobble",
 
 
   "itemgroup.mystbornhorizons.mystbornhorizons_foods": "§8Mystborn Horizons Foods§r",
