--- a/src/main/resources/assets/mystbornhorizons/lang/en_us.json
+++ b/src/main/resources/assets/mystbornhorizons/lang/en_us.json
@@ -112,9 +112,11 @@
 
   "entity.mystbornhorizons.tomahawk": "Tomahawk",
 
-  "entity.mystbornhorizons.samael.venomous_bloom": "Samael uses Venomous Bloom!",
-  "entity.mystbornhorizons.samael.root_network": "Samael uses Root Network!",
-  "entity.mystbornhorizons.samael.pollen_storm": "Samael uses Pollen Storm!",
-  "entity.mystbornhorizons.samael.gardens_wrath": "Samael enters Garden's Wrath!"
+
+  "entity.mystbornhorizons.samael.venomous_bloom": "§d§l⚘ §a§lSamael §r§2uses §d§lVenomous Bloom§r§2! §d⚘",
+  "entity.mystbornhorizons.samael.root_network": "§6§l⚡ §a§lSamael §r§2uses §6§lRoot Network§r§2! §6⚡",
+  "entity.mystbornhorizons.samael.pollen_storm": "§e§l☁ §a§lSamael §r§2uses §e§lPollen Storm§r§2! §e☁",
+  "entity.mystbornhorizons.samael.gardens_wrath": "§c§l❋ §a§lSamael §r§4enters §c§lGarden's Wrath§r§4! §c❋",
+  "entity.mystbornhorizons.samael.tomahawk_barrage": "§b§l⚔ §a§lSamael §r§3summons §b§lTomahawks§r§3! §b⚔"
 
 }
