--- a/src/main/resources/assets/mystbornhorizons/lang/en_us.json
+++ b/src/main/resources/assets/mystbornhorizons/lang/en_us.json
@@ -66,6 +66,7 @@
   "item.mystbornhorizons.froststone_hoe": "Froststone Hoe",
 
   "item.mystbornhorizons.mystborn_dust": "§6Mystborn Dust§r",
+  "item.mystbornhorizons.luminite": "§6Luminite§r",
 
   "item.mystbornhorizons.cauliflower": "Cauliflower",
   "item.mystbornhorizons.power_core": "§a§lPower Core§r",
