Forest Haven Music Disc Changes

--- a/src/main/resources/assets/mystbornhorizons/lang/en_us.json
+++ b/src/main/resources/assets/mystbornhorizons/lang/en_us.json
@@ -106,6 +106,10 @@
   "item.mystbornhorizons.water_horizons_music_disc": "§bMusic Disc§r",
   "item.mystbornhorizons.water_horizons_music_disc.desc": "Cassetu - Water Horizons",
 
+  "item.mystbornhorizons.forest_haven_disc_fragment": "Forest Haven Disc Fragment",
+  "item.mystbornhorizons.forest_haven_music_disc": "§bMusic Disc§r",
+  "item.mystbornhorizons.forest_haven_music_disc.desc": "Cassetu - Forest Haven",
+
   "entity.mystbornhorizons.mantis": "Mantis",
   "entity.mystbornhorizons.copperbulb": "Copper Bulb",
   "entity.mystbornhorizons.icespider": "Ice Spider",
