--- a/src/main/resources/assets/mystbornhorizons/lang/en_us.json
+++ b/src/main/resources/assets/mystbornhorizons/lang/en_us.json
@@ -87,6 +87,7 @@
   "item.mystbornhorizons.froststone_boots": "Froststone Boots",
 
   "effect.mystbornhorizons.slimey": "Slimey",
+  "effect.mystbornhorizons.spore_vision_effect": "Spore Vision",
 
   "item.mystbornhorizons.honey_berries": "Honey Berries",
   "block.mystbornhorizons.honey_berry_bush": "Honey Berry Bush",
